# Blind-typing

./: .gitignore  Cargo.toml  LICENSE  README.md  results.json  texts.txt
src/: app.rs  main.rs  misc.rs  results.json  texts.txt  ui.rs
src/app/: typing_mode.rs  typing_screen.rs
src/app/typing_screen/: result_screen.rs
src/widgets/: keyboard.rs
