[package]
name = "blind_typing"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
description = "A simple CLI tool for blind typing test"
repository = "https://github.com/Happyigr/Blind-typing"
exclude = ["results.json"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.2.3"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
